--- a/chat/src/main/resources/public/style.css
+++ b/chat/src/main/resources/public/style.css
@@ -21,6 +21,7 @@ input {
 }
 
 button {
+    width: 180px;
     float: right;
 }
 
@@ -30,21 +31,21 @@ li {
 
 #chatControls {
     overflow: auto;
-    margin: 0 0 5px 0
+    margin: 0 0 5px 0;
 }
+
 
 #channellist{
     position: fixed;
     left: 50%;
     list-style: none;
-    margin-left: -400px;
+    margin-left: -450px;
     background: #f0f0f9;
     padding: 5px 10px;
-    width: 150px;
+    width: 200px;
     top: 11px;
-}
-#channel{
-    width: 130px;
+    text-align: center;
+    align-items: center;
 }
 
 #userlist {
@@ -62,7 +63,10 @@ li {
     margin: 5px 0;
     font-weight: 300
 }
-
+#chat div{
+    position: fixed;
+    width: 440px;
+}
 #chat .timestamp {
     position: absolute;
     top: 10px;
